...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/ic_default_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/profilePic"
        app:layout_constraintStart_toEndOf="@+id/profilePic"
        app:layout_constraintTop_toTopOf="@+id/profilePic"
...
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="@+id/postPagerHost"
            app:layout_constraintTop_toTopOf="@+id/postPagerHost"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/sensitiveWarning"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_corner"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/cw_nsfw_hidden_media_n_click_to_show"
...
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/commenter"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/add_comment"
        android:padding="4dp"
        android:src="@drawable/selector_commenter"
        app:layout_constraintBottom_toBottomOf="@+id/liker"
        app:layout_constraintEnd_toStartOf="@id/reblogger"
        app:layout_constraintStart_toEndOf="@id/liker"
        app:layout_constraintTop_toTopOf="@id/liker" />

    <at.connyduck.sparkbutton.SparkButton
        android:id="@+id/liker"
        android:layout_width="30dp"
...
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/postDomain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/postDomain" />

    <TextView
        android:id="@+id/nlikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        app:layout_constraintEnd_toEndOf="@+id/liker"
        app:layout_constraintStart_toStartOf="@+id/liker"
        app:layout_constraintTop_toBottomOf="@+id/liker"
        tools:text="2 Likes" />

    <TextView
        android:id="@+id/nshares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@+id/reblogger"
        app:layout_constraintStart_toStartOf="@+id/reblogger"
...
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/profilePic"
        app:layout_constraintTop_toBottomOf="@+id/nlikes"
        tools:text="Account" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hyphenationFrequency="full"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/usernameDesc"
        app:layout_constraintTop_toBottomOf="@+id/usernameDesc"
...
        android:textColor="#b3b3b3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        tools:text="Yesterday" />

    <TextView
        android:id="@+id/viewComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postDate"
        tools:text="3 comments" />
...
