<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item type="id" name="comment" />
    <item type="id" name="page_1" />
    <item type="id" name="page_2" />
    <item type="id" name="page_3" />
    <item type="id" name="page_4" />
    <item type="id" name="page_5" />
</resources>